--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsup src/index.ts --format esm,cjs --dts --out-dir dist --clean",
     "start": "node dist/index.js",
-    "lint": "eslint src --fix",
-    "format": "prettier --write src",
+    "lint": "eslint src --fix && eslint tests --fix",
+    "format": "prettier --write src && prettier --write tests",
+    "test": "vitest",
     "prepare": "husky",
     "commitlint": "commitlint --edit"
   },
@@ -31,7 +32,8 @@
     "tsup": "^8.4.0",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1"
+    "typescript-eslint": "^8.32.1",
+    "vitest": "^3.1.3"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
